29 july 2022 updated codes

--- a/src/pages/expense-status-modal/expense-status-modal.html
+++ b/src/pages/expense-status-modal/expense-status-modal.html
@@ -1,4 +1,4 @@
-<ion-content  class="transprant-bg" *ngIf="from_page == 'travel'||from_page == 'expense'">
+<ion-content  class="transprant-bg" *ngIf="from_page == 'travel'||from_page == 'expense'||from_page == 'leave'">
   <div class="work-modal">
     <div class="work-modal-bg">
       <div>
