--- a/src/pages/sales-app/checkin-detail/checkin-detail.html
+++ b/src/pages/sales-app/checkin-detail/checkin-detail.html
@@ -82,7 +82,7 @@
     <div class="pd-left-right16 mt20">
         <div class="list-box mt16" >           
             <div class="lower mt0">
-                <p>DESCRIPTION</p>
+                <p>Visit Remark</p>
                 <p>{{checkin_data.description ? checkin_data.description : '--'}}</p>
             </div>
         </div>  
