--- a/src/pages/travel-detail/travel-detail.html
+++ b/src/pages/travel-detail/travel-detail.html
@@ -87,6 +87,9 @@
                     <li>
                         <span>{{list.city}}</span>
                     </li>
+                    <li>
+                        <span>{{list.area}}</span>
+                    </li>
                 </ul>
             </div>
 
