--- a/src/pages/expense-popover/expense-popover.html
+++ b/src/pages/expense-popover/expense-popover.html
@@ -11,7 +11,7 @@
         
         <div class="head">
           <span>Search</span>
-          <a class="close" (click)="dismiss()"><i class="material-icons">close</i></a>
+          <a class="close" (click)="close()"><i class="material-icons">close</i></a>
         </div>
         <div class="edit mt10 ml0 mr0">
           <ion-list>            
