--- a/src/pages/expense-status-modal/expense-status-modal.html
+++ b/src/pages/expense-status-modal/expense-status-modal.html
@@ -134,8 +134,8 @@
 
 </ion-content>
 
-<ion-content>
-  <div class="work-modal" *ngIf="from_page=='lead_list'">
+<ion-content *ngIf="from_page=='lead_list'">
+  <div class="work-modal">
     <div class="work-modal-bg">
       <div>
         
