--- a/src/pages/followup-detail/followup-detail.html
+++ b/src/pages/followup-detail/followup-detail.html
@@ -91,11 +91,11 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Followup Detail</ion-title>
-    <ion-buttons end >
+    <!-- <ion-buttons end >
       <button ion-button icon-only color="light" (click)="update_followup()">
           <ion-icon name="md-create"></ion-icon>
       </button>
-  </ion-buttons>
+  </ion-buttons> -->
   </ion-navbar>
 </ion-header>
 
