--- a/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
+++ b/src/pages/sales-app/new-lead/lms-lead-add/lms-lead-add.html
@@ -9,7 +9,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content  *ngIf="page_from!='add'">
+<ion-content  *ngIf="page_from!='add' && tab_id!=19">
   <form name="f" #f="ngForm" >
       <div class="cs-heading1">
           <p>Basic information</p>
@@ -191,7 +191,7 @@
       </div>
   </form>
 </ion-content>
-<ion-content  *ngIf="page_from=='add'">
+<ion-content  *ngIf="page_from=='add' || tab_id==19">
 <form name="f" #f="ngForm" >
     <div class="cs-heading1">
         <p>Lead Source information</p>
@@ -224,7 +224,7 @@
       </ion-item>
       <ion-item [ngClass]="{'cs-error':(f.submitted && ( source_mobile?.invalid ||  form.source_mobile?.length!=10 )) || checkExist==true}">
         <ion-label floating><span>Lead Source Contact No.<strong>*</strong></span></ion-label>
-        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="sourceMobile" placeholder="Enter Mobile" #sourceMobile="ngModel" [(ngModel)]="form.source_mobile" minLength="10" maxLength="10" (ngModelChange)="check_num('source_mobile')" required></ion-input>
+        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="sourceMobile" placeholder="Enter Mobile" #sourceMobile="ngModel" [(ngModel)]="form.source_mobile" minLength="10" maxLength="10"  required></ion-input>
         <!-- <ion-input type="tel"  (keypress)="MobileNumber($event)" name="mobile" placeholder="Enter Mobile" #mobile="ngModel" [(ngModel)]="form.mobile" minLength="10" maxLength="10" (ngModelChange)="check_num()"  required></ion-input> -->
      </ion-item>
      </ion-list>
@@ -243,7 +243,7 @@
        </ion-item>
        <ion-item [ngClass]="{'cs-error':(f.submitted && ( mobile?.invalid ||  form.mobile?.length!=10 )) || checkExist==true}" >
         <ion-label floating><span> Contact Mobile No.<strong>*</strong></span></ion-label>
-        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="mobile" placeholder="Enter Mobile" #mobile="ngModel" [(ngModel)]="form.mobile" minLength="10" maxLength="10" (ngModelChange)="check_num('mobile')"  required></ion-input>
+        <ion-input type="tel"  (keypress)="MobileNumber($event)" name="mobile" placeholder="Enter Mobile" #mobile="ngModel" [(ngModel)]="form.mobile" minLength="10" maxLength="10" required></ion-input>
     </ion-item>
           <!-- <ion-item >
             <ion-label floating><span>Site City/Town <strong>*</strong></span></ion-label>
@@ -295,9 +295,23 @@
                  </ion-select>
              </ion-item>
              <!-- <p  *ngIf="f.submitted && stage_of_project?.invalid" class="error-line">Select Type Is Required</p> -->
-             <ion-item [ngClass]="{'cs-error':f.submitted && expected_order_month?.invalid}" >
-              <ion-label floating> <span>Expected Order Month *</span></ion-label>
-              <ion-datetime display-format="MMM YYYY" placeholder ="Select Month" name="expected_order_month" [(ngModel)]="form.expected_order_month" #expected_order_month="ngModel" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required></ion-datetime>
+             <ion-item class="cs-normal-select mt15 mb0" [ngClass]="{'cs-error':f.submitted && expected_order_month?.invalid}" >
+              <ion-label > <span>Expected Order Month *</span></ion-label>
+              <ion-select  name = "expected_order_month"  #expected_order_month="ngModel"  [(ngModel)]="form.expected_order_month" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required>
+                <ion-option value='January'>January</ion-option>
+                <ion-option value='February'>February</ion-option>
+                <ion-option value='March'>March</ion-option>
+                <ion-option value='April'>April</ion-option>
+                <ion-option value='May'>May</ion-option>
+                <ion-option value='June'>June</ion-option>
+                <ion-option value='July'>July</ion-option>
+                <ion-option value='August'>August</ion-option>
+                <ion-option value='September'>September</ion-option>
+                <ion-option value='October'>October</ion-option>
+                <ion-option value='November'>November</ion-option>
+                <ion-option value='December'>December</ion-option>
+              </ion-select>
+              <!-- <ion-datetime display-format="MMM YYYY" placeholder ="Select Month" name="expected_order_month" [(ngModel)]="form.expected_order_month" #expected_order_month="ngModel" [ngClass]="{'is-invalid':f.submitted && expected_order_month?.invalid}" required></ion-datetime> -->
           </ion-item>
              <ion-item [ngClass]="{'cs-error':f.submitted && ninety_coil_requirment?.invalid}">
               <ion-label floating><span> Expected 90m Coil Requirment<strong>*</strong></span></ion-label>
@@ -337,7 +351,9 @@
 
     <div class="padding16">
         <!-- <button *ngIf="!form.DealerExist && form.mobile && form.mobile.length==10 && form.state && form.district && form.area.length>0" ion-button class="cs-btn" style="margin: 16px 0px !important;">Save</button> -->
-        <button ion-button class="cs-btn" style="margin: 16px 0px !important;" (click)="submit()">Save</button>
+        <button *ngIf="tab_id!=19" ion-button class="cs-btn" style="margin: 16px 0px !important;" (click)="submit()">Save</button>
+        <button *ngIf="tab_id==19"  ion-button class="cs-btn" style="margin: 16px 0px !important;"(click)="update()">Update</button>
+
 
     </div>
 </form>
