--- a/src/pages/sales-app/new-lead/lms-lead-detail/lms-lead-detail.html
+++ b/src/pages/sales-app/new-lead/lms-lead-detail/lms-lead-detail.html
@@ -3,10 +3,13 @@
         <ion-title>Lead Detail</ion-title>
         <ion-buttons end >
 
-            <button ion-button icon-only color="light"  *ngIf="(lead_detail.status=='Lost'||lead_detail.status=='Disqualified'||lead_detail.status=='Win') && lead_detail.date_updated == today_date" (click)="goOnTravelAdd()" >
+            <button ion-button icon-only color="light"  *ngIf="(lead_detail.status=='Lost'||lead_detail.status=='Disqualified'||lead_detail.status=='Win') && lead_detail.date_updated == today_date && tab_id!=19"  (click)="go_editlead()" >
                 <ion-icon name="md-create"></ion-icon>
             </button>
-            <button ion-button icon-only color="light"  *ngIf="lead_detail.status=='qualified' || lead_detail.status=='Lead Bank' " (click)="goOnTravelAdd()" >
+            <button ion-button icon-only color="light"  *ngIf="tab_id==19 && lead_detail.date_created == today_date" (click)="go_editlead()" >
+              <ion-icon name="md-create"></ion-icon>
+          </button>
+            <button ion-button icon-only color="light"  *ngIf="lead_detail.status=='qualified' || lead_detail.status=='Lead Bank' && tab_id!=19 " (click)="go_editlead()" >
               <ion-icon name="md-create"></ion-icon>
           </button>
         </ion-buttons>
@@ -55,7 +58,7 @@
                         <p>Address</p>
                         <p>{{!lead_detail.state ? 'N/A' : lead_detail.state | titlecase}} {{!lead_detail.district ? '' : ', '+lead_detail.district | titlecase}} {{!lead_detail.city ? '' : ', '+lead_detail.city | titlecase}} {{lead_detail.pincode ? ' - '+lead_detail.pincode : ''}}</p>
                     </div>
-                    <div class="endcheck inherit p0" *ngIf="lead_detail.status!='qualified'&& lead_detail.status!='Lost'&& lead_detail.status!='Disqualified'">
+                    <div class="endcheck inherit p0" *ngIf="lead_detail.status!='qualified'&& lead_detail.status!='Lost'&& lead_detail.status!='Disqualified' && tab_id!=19">
 
                         <div class="wp100 mt16">
                             <!-- <button ion-button class="circle-btn" (click)="rmLocalConvExp(i, val3.amount)"><i class="material-icons">delete_sweep</i></button> -->
@@ -256,6 +259,12 @@
                 Create Checkin
             </div>
         </a>
+        <a class="no-height"*ngIf=" (last_attendence_data.start_time != '') "   (click)="presentalert(lead_detail.type,lead_detail.id,lead_detail.company_name)">
+          <p><span>{{lead_detail.dr_checkin}}</span></p>
+          <div class="info">
+             Checkin List
+          </div>
+      </a>
         <a class="no-height" *ngIf=" (last_attendence_data.start_time == '00:00:00'||last_attendence_data.start_time == '')"  (click)="show_Error()">
             <p><span>{{lead_detail.dr_checkin}}</span></p>
             <div class="info">
@@ -310,7 +319,7 @@
                     </li>
                 </ul>
             </div> -->
-            <div class="endcheck inherit p0" *ngIf="lead_detail.status=='qualified'">
+            <div class="endcheck inherit p0" *ngIf="lead_detail.status=='qualified' && tab_id==19">
 
                 <div class="wp100 mt16">
                     <!-- <button ion-button class="circle-btn" (click)="rmLocalConvExp(i, val3.amount)"><i class="material-icons">delete_sweep</i></button> -->
